--- a/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
+++ b/Website/Basis Website [SBR Viewer]/maatwerk_en_breedtesport.html
@@ -68,21 +68,12 @@
                     <div class="col-md-2 nav-menu navbar-intern">
                         <ul class="nav navbar-nav">
                             <li class="page-scroll">
-                                <a href="#over">Over Zebra</a>
+                                <a href="#algemeen">algemeen</a>
                             </li>
                             <li class="page-scroll">
-                                <a href="#nieuws">Nieuws</a>
+                                <a href="#schooltournooi">SchoolTournooi</a>
                             </li>
                             <li class="page-scroll">
-                                <a href="#programma">Programma</a>
-                            </li>
-                            <li class="page-scroll">
-                                <a href="#clubs">Clubs</a>
-                            </li>
-                            <li class="page-scroll">
-                                <a href="#partners">Partners</a>
-                            </li>
-                                <li class="page-scroll">
                                 <a href="#contact">Contact</a>
                             </li>
                         </ul>
@@ -114,7 +105,7 @@
     </header>
 
     <main>
-        <section id="about" class="section about">
+        <section id="algemeen" class="section about">
             <div class="section-body">
                 <div class="content">
                     <div class="section-header">
@@ -146,7 +137,7 @@
                 </div>
             </div>
         </section>
-        <section id="toernooi" class="section toernooi">
+        <section id="schooltournooi" class="section toernooi">
             <div class="section-body">
                 <div class="content">
                     <div class="section-header">
