--- a/Website/Basis Website [SBR Viewer]/rtc.html
+++ b/Website/Basis Website [SBR Viewer]/rtc.html
@@ -37,7 +37,6 @@
                         </button>
                         <a class="navbar-brand" href="index.html">
                             <div>
-    <!--                             <img src="img/logo%20ZeBra.gif" height="60px" alt=""> -->
                                 stg Rugby Zebra
                             </div>
                         </a>
@@ -77,6 +76,9 @@
                                     RTCdagen_2015
                                 </a>
                             </li>
+                            <li class="page-scroll">
+                                <a href="#contact">Contact</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -106,7 +108,7 @@
     </header>
 
     <main>
-        <section id="About" class="section about">
+        <section id="over" class="section about">
             <div class="section-body">
                 <div class="content">
                     <div class="section-header">
@@ -157,7 +159,9 @@
                             
                         </p>
                         <p>
-                            Maandagavond van 18.30 – 20.00<br>
+                            Maandagavond van 18.30 – 20.00
+                        </p>
+                        <p>
                             Strenght-, conditioning-, combat- en winnerstrainingen 3x per week. Alleen op uitnodiging van ZeBra Technisch Hart.
                         </p>
                         <p>
