--- a/Website/Basis Website [SBR Viewer]/selecties.html
+++ b/Website/Basis Website [SBR Viewer]/selecties.html
@@ -27,8 +27,8 @@
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
     <header>
-        <div class="container">
-            <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+            <div class="container">
                 <div class="row">
                     
                     <div class="navbar-header">
@@ -61,63 +61,65 @@
                         </ul>
                     </div>
                 </div>
-            </nav>
+            </div>
+        </nav>
 
-            <nav class="navbar navbar-custom navbar-intern">
-                <div class="row">
-                    <div class="col-md-2 nav-menu navbar-intern">
-                        <ul class="nav navbar-nav">
-                            <li class="page-scroll">
-                                <a href="#oranje">
-                                    Oranjespelers
-                                </a>
-                            </li>
-                            <li class="page-scroll">
-                                <a href="#HU12">
-                                    Heren_U12
-                                </a>
-                            </li>
-                            <li class="page-scroll">
-                                <a href="#HU13">
-                                    Heren_U13
-                                </a>
-                            </li>
-                            <li class="page-scroll">
-                                <a href="#HU14">
-                                    Heren_U14
-                                </a>
-                            </li>
-                            <li class="page-scroll">
-                                <a href="#HU15">
-                                    Heren_U15
-                                </a>
-                            </li>
-                            <li class="page-scroll">
-                                <a href="#HU16">
-                                    Heren_U16
-                                </a>
-                            </li>
-                            <li class="page-scroll">
-                                <a href="#HU17">
-                                    Heren_U17
-                                </a>
-                            </li>
-                            <li class="page-scroll">
-                                <a href="#DU15">
-                                    Dames_U15
-                                </a>
-                            </li>
-                            <li class="page-scroll">
-                                <a href="#DU18">
-                                    Dames_U18
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>       
-            </nav>
-        </div>
-        <!-- /.container -->
+        <nav class="navbar navbar-custom navbar-intern">
+            <div class="row">
+                <div class="col-md-2 nav-menu navbar-intern">
+                    <ul class="nav navbar-nav">
+                        <li class="page-scroll">
+                            <a href="#oranje">
+                                Oranjespelers
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#HU12">
+                                Heren_U12
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#HU13">
+                                Heren_U13
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#HU14">
+                                Heren_U14
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#HU15">
+                                Heren_U15
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#HU16">
+                                Heren_U16
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#HU17">
+                                Heren_U17
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#DU15">
+                                Dames_U15
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#DU18">
+                                Dames_U18
+                            </a>
+                        </li>
+                        <li class="page-scroll">
+                            <a href="#contact">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>       
+        </nav>
 
         <section id="intro" class="section intro">
             <div class="section-body">
@@ -302,15 +304,150 @@
             </div>
         </div>
     </section>
-    <section id="footer">
-        <div class="footer-section">
-            <p>
-                <span lang="nl"> &copy; 2014 Accept Development B.V. Alle rechten voorbehouden. Vragen? Stuur ons <a href="mailto:info@sbrviewer.eu">email</a>.</span>
-                <span lang="en"> &copy; 2014 Accept Development B.V. All Rights Reserved. Questions? Feel free to <a href="mailto:info@sbrviewer.eu">drop me an email</a>.</span>
+    <section id="contact" class="section contact">
+            <div class="section-body">
+                <div class="content">
+                    <div class="section-container ">
+                        <div class="vert-center">
+                            <div class="row">
+                                <div class="col-lg-4 col-lg-offset-1 col-sm-4 col-md-6 col-xs-10 contact-left">
+                                    <h3>
+                                        Stuur een bericht
+                                    </h3>
+                                    <br>
+                                    <p>
+                                        Hebt u opmerkingen of suggesties voor ons? Dan horen wij dat graag.
+                                    </p>
+                                    <br>
+                                    <p>
+                                        <a href="mailto:info@rugbyzebra.nl" class="social">
+                                            info@rugbyzebra.nl
+                                        </a><br />
+                                        <br />
+                                        <a href="https://nl-nl.facebook.com/pages/Rugby-ZeBra/1419160591671039" class="social" target="blank">
+                                            <i class="fa fa-facebook"></i>
+                                            <!--[if lt IE 8]>F: facebook<br /><![endif]-->
+                                        </a>
+                                        <a href="mailto:info@rugbyzebra.nl" class="social">
+                                            <i class="fa fa-inbox"></i>
+                                            <!--[if lt IE 8]>E: info@rugbyzebra.nl<![endif]-->
+                                        </a>
+                                    </p>
+                                </div>
+                                <div class="col-lg-5 col-sm-8 col-md-6 col-xs-10 contact-right">
+                                    <h3>
+                                        Werk met ons samen
+                                    </h3>
+                                    <br>
+                                    <p>
+                                        Ook wanneer u mogelijkheden ziet tot samenwerking, horen wij graag van u.
+                                    </p>
+                                    <br>
+                                    <p class="page-scroll">
+                                        <a href="#contact-form" class="button">Formulier</a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="contact-form" class="section contact-form">
+            <div class="section-body">
+                <div class="content">
+                    <div class="section-header">
+                        <h2>
+                            Stuur een bericht
+                        </h2>
+                        <div class="divider-grey"></div>
+                    </div>
+                    <div class="section-container">
+                        <div class="row">
+                            <div class="col-lg-10 col-lg-offset-1">
+                                <form ng-submit="submitForm()" ng-controller="FormController" novalidate>
 
-            </p>
-        </div>
-    </section>
+                                    <div class="form-group">
+                                        <label for="name">
+                                            <!--[if lt IE 10]>
+                                                <span lang="nl">Naam</span>
+                                                <span lang="en">Naam</span>
+                                            <![endif]-->
+                                        </label>
+                                        <input type="text" class="form-control" name="name" ng-model="formData.name" ng-class="{'error' : errorName}" data-placeholder_class=".placeholder" title="Naam en of bedrijfsnaam">
+                                        <div class="required">*</div>
+                                        <div class="placeholder hidden">
+                                            Naam
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="email">
+                                            <!--[if lt IE 10]>
+            <span lang="nl">E-mail</span>
+            <span lang="en">E-mail</span>
+                <![endif]-->
+                                        </label>
+                                        <input type="email" class="form-control" name="email" ng-model="formData.email" ng-class="{'error' : errorEmail}" data-placeholder_class=".placeholder" title="E-mail">
+                                        <div class="required">*</div>
+                                        <div class="placeholder hidden">
+                                            E-mail
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="phone">
+                                            <!--[if lt IE 10]>
+                    <span lang="nl">Telefoonnummer</span>
+                    <span lang="en">Phonenumber</span>
+                        <![endif]-->
+                                        </label>
+                                        <input type="text" class="form-control" name="phone" ng-model="formData.phone" data-placeholder_class=".placeholder" title="Telefoonnummer">
+                                        <div class="placeholder hidden">  Telefoonnummer
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="message">
+                                            <!--[if lt IE 10]>
+            <span lang="nl">Verstuur bericht</span>
+            <span lang="en">Submit message</span>
+                <![endif]-->
+                                        </label>
+                                        <textarea class="form-control" name="message" ng-class="{'error' : errorTextarea}" ng-model="formData.message" cols="30" rows="10" data-placeholder_class=".placeholder" title="Stel uw vraag"></textarea>
+                                        <div class="required">*</div>
+                                        <div class="placeholder hidden">
+                                            Stel uw vraag
+                                        </div>
+                                    </div>
+                                    <div class="QapTcha">
+                                        <div class="TxtShow">
+                                            Verstuur bericht
+                                        </div>
+                                        <div class="TxtHelp">
+                                            Schuif naar rechts om te versturen!
+                                        </div>
+                                    </div>
+                                    <input class="hidden" type="submit" value="Send!" name="submit">
+                                    <div ng-class="{'submissionMessage' : submission}" ng-bind="submissionMessage"></div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
+
+
+
+
+<section id="footer">
+    <div class="footer-section">
+        <p>&copy; 2015 Stichting Rugby Zebra Alle rechten voorbehouden<br/> Vragen? Stuur ons <a href="mailto:info@rugbyzebra.nl">e-mailbericht</a>.
+        </p>
+    </div>
+</section>
+        
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
