--- a/Website/Basis Website [SBR Viewer]/selecties.html
+++ b/Website/Basis Website [SBR Viewer]/selecties.html
@@ -143,167 +143,199 @@
 
     <section id="oranje" class="section about">
         <div class="section-body">
-            <div class="section-header">
-                <h2>Zebra spelers in oranje</h2>
-                <div class="divider-grey"></div>
-                <div class="table">
-                    <table align="center">
-                    <tr>
-                        <td width="250" height="15">Naam</td>
-                        <td WIDTH="25">Vereniging</td>
-                        <td WIDTH="25">Selectie</td>
-                        </tr>
-                        <tr>
-                        <td height="40">Danen Dirk</td>
-                        <td>RHC</td>
-                        <td>NL A</td>
-                        </tr>
-                        <tr>
-                        <td height="40">Rik Roovers</td>
-                        <td>RHC</td>
-                        <td>NL A</td>
-                        </tr>
-                        <td height="40">Yirmibes Yavuz</td>
-                        <td>RHC</td>
-                        <td>NL A</td>
-                        </tr>
-                        <td height="40">Bastiaansen Jens</td>
-                        <td>REL</td>
-                        <td>NL U18</td>
-                        </tr>
-                        <td height="40">Nielen van No&euml;l</td>
-                        <td>Rel</td>
-                        <td>NL U17</td>
-                    </tr>
-                    </table>
+            <div class="content">
+                <div class="section-header">
+                    <h2>Zebra spelers in oranje</h2>
+                    <div class="divider-grey"></div>
+                    <div class="table">
+                        <table align="center">
+                            <tr>
+                                <td width="250" height="15">Naam</td>
+                                <td WIDTH="25">Vereniging</td>
+                                <td WIDTH="25">Selectie</td>
+                            </tr>
+                            <tr>
+                                <td height="40">Danen Dirk</td>
+                                <td>RHC</td>
+                                <td>NL A</td>
+                            </tr>
+                            <tr>
+                                <td height="40">Rik Roovers</td>
+                                <td>RHC</td>
+                                <td>NL A</td>
+                            </tr>
+                            <tr>
+                                <td height="40">Yirmibes Yavuz</td>
+                                <td>RHC</td>
+                                <td>NL A</td>
+                            </tr>
+                            <tr>
+                                <td height="40">Bastiaansen Jens</td>
+                                <td>REL</td>
+                                <td>NL U18</td>
+                            </tr>
+                            <tr>
+                                <td height="40">Nielen van No&euml;l</td>
+                                <td>Rel</td>
+                                <td>NL U17</td>
+                            </tr>
+                        </table>
+                    </div>
                 </div>
-            </div>
-            <div class="section-container hcenter">
-                <div class="vert-center">
-                    <class>
-                </div>
+                <div class="section-container hcenter">
+                    <div class="vert-center">
+                    </div>
 
+                </div>
             </div>
         </div>
     </section>
+
     <section id="HU12" class="section impressie">
         <div class="section-body">
-            <div class="section-header">
-                <h2>Zebra Heren U12</h2>
-                <div class="divider-grey"></div>
-                                <div class="table">
-                    <table align="center">
-                    <TR>
-                        <TD WIDTH="250" HEIGHT="15">Naam</TD>
-                        <TD WIDTH="25">Vereniging</TD>
-                        <TD WIDTH="25">Selectie</TD>
-                        </TR>
-                        <TR>
-                        <TD HEIGHT="40">Danen Dirk</TD>
-                        <TD>RHC</TD>
-                        <TD>NL A</TD>
-                        </TR>
-                        <TR>
-                        <TD HEIGHT="40">Rik Roovers</TD>
-                        <TD>RHC</TD>
-                        <TD>NL A</TD>
-                        </TR>
-                        <TD HEIGHT="40">Yirmibes Yavuz</TD>
-                        <TD>RHC</TD>
-                        <TD>NL A</TD>
-                        </TR>
-                        <TD HEIGHT="40">Bastiaansen Jens</TD>
-                        <TD>REL</TD>
-                        <TD>NL U18</TD>
-                        </TR>
-                        <TD HEIGHT="40">Nielen van No&euml;l</TD>
-                        <TD>Rel</TD>
-                        <TD>NL U17</TD>
-                    </TR>
-                    </table>
+            <div class="content">
+                <div class="section-header">
+                    <h2>Zebra Heren U12</h2>
+                    <div class="divider-grey"></div>
+                    <div class="table">
+                        <table align="center">
+                            <tr>
+                                <td width="250" height="15">Naam</td>
+                                <td width="25">Vereniging</td>
+                                <td width="25">Selectie</td>
+                            </tr>
+                            <tr>
+                                <td height="40">Danen Dirk</td>
+                                <td>RHC</td>
+                                <td>NL A</td>
+                            </tr>
+                            <tr>
+                                <td height="40">Rik Roovers</td>
+                                <td>RHC</td>
+                                <td>NL A</td>
+                            </tr>
+                            <tr>
+                                <td height="40">Yirmibes Yavuz</td>
+                                <td>RHC</td>
+                                <td>NL A</td>
+                            </tr>
+                            <tr>
+                                <td height="40">Bastiaansen Jens</td>
+                                <td>REL</td>
+                                <td>NL U18</td>
+                            </tr>
+                            <tr>
+                                <td height="40">Nielen van No&euml;l</td>
+                                <td>Rel</td>
+                                <td>NL U17</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="section-container">
                 </div>
             </div>
-            <div class="section-container">
-            </div>
         </div>
     </section>
+
     <section id="HU13" class="section software">
         <div class="section-body">
-            <div class="section-header">
-                <h2>Zebra Heren U13</h2>
-                <div class="divider-grey"></div>
-            </div>
-            <div class="section-container">
-                
+            <div class="content">
+                <div class="section-header">
+                    <h2>Zebra Heren U13</h2>
+                    <div class="divider-grey"></div>
+                </div>
+                <div class="section-container">
+                    
+                </div>
             </div>
         </div>
     </section>
+
     <section id="HU14" class="section download">
         <div class="section-body">
-            <div class="section-header">
-                <h2>Zebra Heren U14</h2>
-                <div class="divider-grey"></div>
-            </div>
-            <div class="section-container">
+            <div class="content">
+                <div class="section-header">
+                    <h2>Zebra Heren U14</h2>
+                    <div class="divider-grey"></div>
+                </div>
+                <div class="section-container">
 
+                </div>
             </div>
         </div>
     </section>
+
     <section id="HU15" class="section download">
         <div class="section-body">
-            <div class="section-header">
-                <h2>Zebra Heren U15</h2>
-                <div class="divider-grey"></div>
-            </div>
-            <div class="section-container">
+            <div class="content">
+                <div class="section-header">
+                    <h2>Zebra Heren U15</h2>
+                    <div class="divider-grey"></div>
+                </div>
+                <div class="section-container">
 
+                </div>
             </div>
         </div>
     </section>
+
     <section id="HU16" class="section contact-form">
         <div class="section-body">
-            <div class="section-header">
-                <h2>Zebra Heren U16</h2>
-                <div class="divider-grey"></div>
-            </div>
-            <div class="section-container">
+            <div class="content">
+                <div class="section-header">
+                    <h2>Zebra Heren U16</h2>
+                    <div class="divider-grey"></div>
+                </div>
+                <div class="section-container">
 
+                </div>
             </div>
         </div>
     </section>
+
      <section id="HU17" class="section contact-form">
         <div class="section-body">
-            <div class="section-header">
-                <h2>Zebra Heren U17</h2>
-                <div class="divider-grey"></div>
-            </div>
-            <div class="section-container">
+            <div class="content">
+                <div class="section-header">
+                    <h2>Zebra Heren U17</h2>
+                    <div class="divider-grey"></div>
+                </div>
+                <div class="section-container">
 
+                </div>
             </div>
         </div>
     </section>
-         <section id="DU15" class="section contact-form">
+
+    <section id="DU15" class="section contact-form">
         <div class="section-body">
-            <div class="section-header">
-                <h2>Zebra Dames U15</h2>
-                <div class="divider-grey"></div>
-            </div>
-            <div class="section-container">
+            <div class="content">
+                <div class="section-header">
+                    <h2>Zebra Dames U15</h2>
+                    <div class="divider-grey"></div>
+                </div>
+                <div class="section-container">
 
+                </div>
             </div>
         </div>
     </section>
+
     <section id="DU18" class="section contact-form">
         <div class="section-body">
-            <div class="section-header">
-                <h2>Zebra Dames U18</h2>
-                <div class="divider-grey"></div>
-            </div>
-            <div class="section-container">
+            <div class="content">
+                <div class="section-header">
+                    <h2>Zebra Dames U18</h2>
+                    <div class="divider-grey"></div>
+                </div>
+                <div class="section-container">
 
-            </div>
+                </div>
+            <div class="content">
         </div>
     </section>
+
     <section id="contact" class="section contact">
             <div class="section-body">
                 <div class="content">
@@ -353,6 +385,7 @@
                 </div>
             </div>
         </section>
+
         <section id="contact-form" class="section contact-form">
             <div class="section-body">
                 <div class="content">
