Selecties pagina gedeeltelijk gevuld

--- a/Website/Basis Website [SBR Viewer]/selecties.html
+++ b/Website/Basis Website [SBR Viewer]/selecties.html
@@ -74,43 +74,28 @@
                             </a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#HU12">
-                                Heren_U12
+                            <a href="#junioren">
+                                Junioren
                             </a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#HU13">
-                                Heren_U13
+                            <a href="#cubs">
+                                Cubs
                             </a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#HU14">
-                                Heren_U14
+                            <a href="#minis">
+                                Mini's
                             </a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#HU15">
-                                Heren_U15
+                            <a href="#benjamins">
+                                Benjamins
                             </a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#HU16">
-                                Heren_U16
-                            </a>
-                        </li>
-                        <li class="page-scroll">
-                            <a href="#HU17">
-                                Heren_U17
-                            </a>
-                        </li>
-                        <li class="page-scroll">
-                            <a href="#DU15">
-                                Dames_U15
-                            </a>
-                        </li>
-                        <li class="page-scroll">
-                            <a href="#DU18">
-                                Dames_U18
+                            <a href="#dames">
+                                Dames
                             </a>
                         </li>
                         <li class="page-scroll">
@@ -148,38 +133,9 @@
                     <h2>Zebra spelers in oranje</h2>
                     <div class="divider-grey"></div>
                     <div class="table">
-                        <table align="center">
-                            <tr>
-                                <td width="250" height="15">Naam</td>
-                                <td WIDTH="25">Vereniging</td>
-                                <td WIDTH="25">Selectie</td>
-                            </tr>
-                            <tr>
-                                <td height="40">Danen Dirk</td>
-                                <td>RHC</td>
-                                <td>NL A</td>
-                            </tr>
-                            <tr>
-                                <td height="40">Rik Roovers</td>
-                                <td>RHC</td>
-                                <td>NL A</td>
-                            </tr>
-                            <tr>
-                                <td height="40">Yirmibes Yavuz</td>
-                                <td>RHC</td>
-                                <td>NL A</td>
-                            </tr>
-                            <tr>
-                                <td height="40">Bastiaansen Jens</td>
-                                <td>REL</td>
-                                <td>NL U18</td>
-                            </tr>
-                            <tr>
-                                <td height="40">Nielen van No&euml;l</td>
-                                <td>Rel</td>
-                                <td>NL U17</td>
-                            </tr>
-                        </table>
+                        <p class="text-center">Door middel van de onderstaande knop kunt u het team schema downloaden.</p>
+
+                        <a href="#" class="btn btn-primary btn-lg active" role="button" target="blank">Oranjespelers</a>
                     </div>
                 </div>
                 <div class="section-container hcenter">
@@ -191,46 +147,40 @@
         </div>
     </section>
 
-    <section id="HU12" class="section impressie">
+    <section id="junioren" class="section impressie">
         <div class="section-body">
             <div class="content">
                 <div class="section-header">
-                    <h2>Zebra Heren U12</h2>
+                    <h2>Zebra Heren U16 &amp; U17</h2>
                     <div class="divider-grey"></div>
                     <div class="table">
-                        <table align="center">
+                        <table class="table">
                             <tr>
-                                <td width="250" height="15">Naam</td>
-                                <td width="25">Vereniging</td>
-                                <td width="25">Selectie</td>
+                                <th class="info" colspan="2">Begeleiding</th>
                             </tr>
                             <tr>
-                                <td height="40">Danen Dirk</td>
-                                <td>RHC</td>
-                                <td>NL A</td>
+                                <td>Hoofdcoach</td>
+                                <td>Ed Oskam</td>
                             </tr>
                             <tr>
-                                <td height="40">Rik Roovers</td>
-                                <td>RHC</td>
-                                <td>NL A</td>
+                                <td>Voorwaartsen</td>
+                                <td>Quinten Storer</td>
                             </tr>
                             <tr>
-                                <td height="40">Yirmibes Yavuz</td>
-                                <td>RHC</td>
-                                <td>NL A</td>
+                                <td>Backs</td>
+                                <td>Hugo Derene</td>
                             </tr>
                             <tr>
-                                <td height="40">Bastiaansen Jens</td>
-                                <td>REL</td>
-                                <td>NL U18</td>
-                            </tr>
-                            <tr>
-                                <td height="40">Nielen van No&euml;l</td>
-                                <td>Rel</td>
-                                <td>NL U17</td>
+                                <td>Teammanager(s)</td>
+                                <td>Ad Capello en Laurenz Broos</td>
                             </tr>
                         </table>
+                        <p class="text-center">Door middel van de onderstaande knoppen kunt u de team schema's downloaden.</p>
+
+                        <a href="#" class="btn btn-primary btn-lg active" role="button" target="blank">Heren U16</a>
+                        <a href="#" class="btn btn-primary btn-lg active" role="button" target="blank">Heren U17</a>
                     </div>
+
                 </div>
                 <div class="section-container">
                 </div>
@@ -238,12 +188,39 @@
         </div>
     </section>
 
-    <section id="HU13" class="section software">
+    <section id="cubs" class="section software">
         <div class="section-body">
             <div class="content">
                 <div class="section-header">
-                    <h2>Zebra Heren U13</h2>
+                    <h2>Zebra Heren U14 &amp; U15</h2>
                     <div class="divider-grey"></div>
+                    <div class="table">
+                        <table class="table">
+                            <tr>
+                                <th class="info" colspan="2">Begeleiding</th>
+                            </tr>
+                            <tr>
+                                <td>Hoofdcoach</td>
+                                <td>Jan Albregtse</td>
+                            </tr>
+                            <tr>
+                                <td>Voorwaartsen</td>
+                                <td>Noël van Nielen</td>
+                            </tr>
+                            <tr>
+                                <td>Backs</td>
+                                <td>Marc Scheepers</td>
+                            </tr>
+                            <tr>
+                                <td>Teammanager(s)</td>
+                                <td>Vacant</td>
+                            </tr>
+                        </table>
+                        <p class="text-center">Door middel van de onderstaande knoppen kunt u de team schema's downloaden.</p>
+
+                        <a href="#" class="btn btn-primary btn-lg active" role="button" target="blank">Heren U14</a>
+                        <a href="#" class="btn btn-primary btn-lg active" role="button" target="blank">Heren U15</a>
+                    </div>
                 </div>
                 <div class="section-container">
                     
@@ -252,12 +229,39 @@
         </div>
     </section>
 
-    <section id="HU14" class="section download">
+    <section id="minis" class="section download">
         <div class="section-body">
             <div class="content">
                 <div class="section-header">
-                    <h2>Zebra Heren U14</h2>
+                    <h2>Zebra Heren U12 &amp; U13</h2>
                     <div class="divider-grey"></div>
+                    <div class="table">
+                        <table class="table">
+                            <tr>
+                                <th class="info" colspan="2">Begeleiding</th>
+                            </tr>
+                            <tr>
+                                <td>Hoofdcoach</td>
+                                <td>Ray Blackburn</td>
+                            </tr>
+                            <tr>
+                                <td>Voorwaartsen</td>
+                                <td>Yavuz Yirmibes</td>
+                            </tr>
+                            <tr>
+                                <td>Backs</td>
+                                <td>Sam Derene</td>
+                            </tr>
+                            <tr>
+                                <td>Teammanager(s)</td>
+                                <td>Vacant</td>
+                            </tr>
+                        </table>
+                        <p class="text-center">Door middel van de onderstaande knoppen kunt u de team schema's downloaden.</p>
+
+                        <a href="#" class="btn btn-primary btn-lg active" role="button" target="blank">Heren U12</a>
+                        <a href="#" class="btn btn-primary btn-lg active" role="button" target="blank">Heren U13</a>
+                    </div>
                 </div>
                 <div class="section-container">
 
@@ -266,12 +270,39 @@
         </div>
     </section>
 
-    <section id="HU15" class="section download">
+    <section id="benjamins" class="section download">
         <div class="section-body">
             <div class="content">
                 <div class="section-header">
-                    <h2>Zebra Heren U15</h2>
+                    <h2>Zebra Heren U10 &amp; U11</h2>
                     <div class="divider-grey"></div>
+                    <div class="table">
+                        <table class="table">
+                            <tr>
+                                <th class="info" colspan="2">Begeleiding</th>
+                            </tr>
+                            <tr>
+                                <td>Hoofdcoach</td>
+                                <td>Wilco Bouwens</td>
+                            </tr>
+                            <tr>
+                                <td>Voorwaartsen</td>
+                                <td>Kerim Yirmibes</td>
+                            </tr>
+                            <tr>
+                                <td>Backs</td>
+                                <td>Kerim Yirimbes</td>
+                            </tr>
+                            <tr>
+                                <td>Teammanager(s)</td>
+                                <td>Vacant</td>
+                            </tr>
+                        </table>
+                        <p class="text-center">Door middel van de onderstaande knoppen kunt u de team schema's downloaden.</p>
+
+                        <a href="#" class="btn btn-primary btn-lg active" role="button" target="blank">Heren U11</a>
+                        <a href="#" class="btn btn-primary btn-lg active" role="button" target="blank">Heren U10</a>
+                    </div>
                 </div>
                 <div class="section-container">
 
@@ -280,59 +311,44 @@
         </div>
     </section>
 
-    <section id="HU16" class="section contact-form">
+    <section id="dames" class="section contact-form">
         <div class="section-body">
             <div class="content">
                 <div class="section-header">
-                    <h2>Zebra Heren U16</h2>
+                    <h2>Zebra Dames U15 &amp; U18</h2>
                     <div class="divider-grey"></div>
+                    <div class="table">
+                        <table class="table">
+                            <tr>
+                                <th class="info" colspan="2">Begeleiding</th>
+                            </tr>
+                            <tr>
+                                <td>Hoofdcoach</td>
+                                <td>Willem van Kelle</td>
+                            </tr>
+                            <tr>
+                                <td>Voorwaartsen</td>
+                                <td>Rik van Dijk</td>
+                            </tr>
+                            <tr>
+                                <td>Backs</td>
+                                <td>Jordi van Peer</td>
+                            </tr>
+                            <tr>
+                                <td>Teammanager(s)</td>
+                                <td>Vacant</td>
+                            </tr>
+                        </table>
+                        <p class="text-center">Door middel van de onderstaande knoppen kunt u de team schema's downloaden.</p>
+
+                        <a href="#" class="btn btn-primary btn-lg active" role="button" target="blank">Dames U15</a>
+                        <a href="#" class="btn btn-primary btn-lg active" role="button" target="blank">Dames U18</a>
+                    </div>
                 </div>
                 <div class="section-container">
 
                 </div>
             </div>
-        </div>
-    </section>
-
-     <section id="HU17" class="section contact-form">
-        <div class="section-body">
-            <div class="content">
-                <div class="section-header">
-                    <h2>Zebra Heren U17</h2>
-                    <div class="divider-grey"></div>
-                </div>
-                <div class="section-container">
-
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="DU15" class="section contact-form">
-        <div class="section-body">
-            <div class="content">
-                <div class="section-header">
-                    <h2>Zebra Dames U15</h2>
-                    <div class="divider-grey"></div>
-                </div>
-                <div class="section-container">
-
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="DU18" class="section contact-form">
-        <div class="section-body">
-            <div class="content">
-                <div class="section-header">
-                    <h2>Zebra Dames U18</h2>
-                    <div class="divider-grey"></div>
-                </div>
-                <div class="section-container">
-
-                </div>
-            <div class="content">
         </div>
     </section>
 
